--- a/source/main.tex
+++ b/source/main.tex
@@ -42,25 +42,25 @@
 
 
 %%% Fiches
-%\newpage\nopagecolor\input{mb-borneSatisfaction.tex}
-%\newpage\nopagecolor\input{mb-fraction.tex}
-%\newpage\nopagecolor\input{mb-dede.tex}
-%\newpage\nopagecolor\input{mb-truque.tex}
-%\newpage\nopagecolor\input{mb-pile.tex}
-%\newpage\nopagecolor\input{mb-fluctuation.tex}
-%\newpage\nopagecolor\input{mb-oscillations.tex}
-%\newpage\nopagecolor\input{mbpy-FT_python.tex}
+\newpage\nopagecolor\input{mb-borneSatisfaction.tex}
+\newpage\nopagecolor\input{mb-fraction.tex}
+\newpage\nopagecolor\input{mb-dede.tex}
+\newpage\nopagecolor\input{mb-truque.tex}
+\newpage\nopagecolor\input{mb-pile.tex}
+\newpage\nopagecolor\input{mb-fluctuation.tex}
+\newpage\nopagecolor\input{mb-oscillations.tex}
+\newpage\nopagecolor\input{mbpy-FT_python.tex}
 \newpage\nopagecolor\input{mb_makecode_blocsPrincipaux.tex}
 \newpage\nopagecolor\input{mb_makecode_1erProgramme.tex}
-%\newpage\nopagecolor\input{mbpy-initiationPython.tex}
-%\newpage\nopagecolor\input{mbpy-dede.tex}
-%\newpage\nopagecolor\input{mbpy-pilecom.tex}
-%\newpage\nopagecolor\input{maqueen-distance.tex}
-%\newpage\nopagecolor\input{mbot-vitesse.tex}
-%\newpage\nopagecolor\input{mbot-vitesse-rot.tex}
-%\newpage\nopagecolor\input{mbot-natureMouvement.tex}
-%\newpage\nopagecolor\input{st-truque.tex}
-%\newpage\nopagecolor\input{st-pile.tex}
+\newpage\nopagecolor\input{mbpy-initiationPython.tex}
+\newpage\nopagecolor\input{mbpy-dede.tex}
+\newpage\nopagecolor\input{mbpy-pilecom.tex}
+\newpage\nopagecolor\input{maqueen-distance.tex}
+\newpage\nopagecolor\input{mbot-vitesse.tex}
+\newpage\nopagecolor\input{mbot-vitesse-rot.tex}
+\newpage\nopagecolor\input{mbot-natureMouvement.tex}
+\newpage\nopagecolor\input{st-truque.tex}
+\newpage\nopagecolor\input{st-pile.tex}
 
 
 \end{document}
