fiche sur mu en cours de réalisation

--- a/source/00_modele_activite.tex
+++ b/source/00_modele_activite.tex
@@ -1,17 +1,18 @@
+%   style de la page + logo
+%   commenter avec % le style non utilisé
+\style{mb} %pour microbit
+%\style{mbot} %pour mbot
+%\style{st} %pour ST
+%\style{mq} % pour maqueen
+%\style{mbpy} % pour microbit & python
+
+
 %   Titre de la sous sections
 \section{Mon titre génial avec \mb}
 
-%   logo mb ou st dans la table des matières
-\logo{mb}
-%\logo{mbot}
-%\logo{st}
 
-%
-%   style de la page
-%   commenter avec % le style non utilisé
-\pagestyle{mb} %pour microbit
-%\pagestyle{mbot} %pour mbot
-%\pagestyle{st} %pour ST
+
+\style{mb}
 
 \subsection{Description}
 
@@ -63,7 +64,7 @@ L'intérêt de traiter ce projet avec\ldots
 \begin{methode}
     Quelques détails
     \ldots % points de suspensions
-    
+
     \begin{enumerate}
         \item \textbf{Initiation - Premier modèle.} \\
             bla bla\ldots % points de suspensions
@@ -73,7 +74,7 @@ L'intérêt de traiter ce projet avec\ldots
 \end{methode}
 
 %
-% activité de niveau 
+% activité de niveau
 %
 
 %   saut de page
@@ -85,7 +86,7 @@ L'intérêt de traiter ce projet avec\ldots
 \subsubsection{Activité élève}
 
 % commande perso \CARTOUCHE
-%   5 paramètres : 
+%   5 paramètres :
 %       * durée
 %       * public
 %       * travail en maths
@@ -107,9 +108,9 @@ L'intérêt de traiter ce projet avec\ldots
 
 %   bloc élève
 %   fond orange
-\begin{eleve}    
+\begin{eleve}
     \texttt{\textsc{Ta Mission} : Utiliser\ldots avec \emph{énergie}!}
-    
+
 %   ajout d'une image
     \includegraphics[width=0.5\linewidth]{res/st-pf-00-eleve.png}
 \end{eleve}
@@ -142,7 +143,7 @@ bla bla\ldots
 \begin{minipage}[t]{0.7\linewidth}
     \begin{methode}~\\
     Proposition de résolution :
-    
+
     bla bla\ldots
     \end{methode}
 \end{minipage}
