--- a/source/apropos-mb.tex
+++ b/source/apropos-mb.tex
@@ -1,33 +1,40 @@
+\style{plain}
+
 \section{À propos de la carte \mb}
-\pagestyle{plain}
 
-\begin{wrapfigure}[7]{l}{4cm}
-    \includegraphics[width=\linewidth]{res/mb-ap-01.png}
-    \legend{Carte \mb}
+
+\mb est un microcontrôleur développé au Royaume-Unis.
+Par ses caractéristiques techniques et ses interfaces
+pédagogiques, cet objet possède un fort potentiel pour
+l’enseignement de l’algorithmique.
+
+
+
+\begin{wrapfigure}{r}{4cm}
+	\includegraphics[width=\linewidth]{res/mb-ap-01.png}
+	\legend{Carte \mb}
 \end{wrapfigure}
-
-\mb est un microcontrôleur développé au Royaume-Unis. Par ses caractéristiques techniques et ses interfaces pédagogiques, cet objet possède un fort potentiel pour l’enseignement de l’algorithmique.
 
 Après un bref rappel historique, nous expliquerons plus en détail les caractéristiques propres de cet objet. Nous mettrons ensuite en avant la facilité de mise en œuvre en formation puis nous poursuivrons en donnant un premier aperçu de l’intérêt pédagogique de \mb.
 
 \subsection{Bref historique}
 
-\begin{wrapfigure}[12]{r}{5cm}
-    \includegraphics[width=\linewidth]{res/mb-ap-03}
-    \legend{Cartes \mb branchée en USB}
-\end{wrapfigure}
-
 
 Le développement de \mb s’inscrit dans le cadr d’une politique volontariste de développement de l’apprentissage de la programmation. L’objectif premier visait à équiper tous les élèves de 11/12 ans du Royaume-Unis ainsi que leur enseignant. Maintenant que c’est chose faite, le reste du monde peut en profiter aussi.
+
+% \begin{wrapfigure}[12]{r}{5cm}
+%     \includegraphics[width=\linewidth]{res/mb-ap-03}
+%     \legend{Cartes \mb branchée en USB}
+% \end{wrapfigure}
 
 
 La BBC\footnote{Make It Digital - The BBC micro:bit. (s. d.). Consulté 29 mars 2017, à l’adresse \url{http://www.bbc.co.uk/programmes/articles/4hVG2Br1W1LKCmw8nSm9WnQ/the-bbc-micro-bit}} est le moteur de ce projet. 30 ans après sa première distribution d’ordinateurs aux enfants britanniques\footnote{BBC Micro. (2016, septembre 20). In Wikipédia. Consulté à l’adresse \url{https://fr.wikipedia.org/w/index.php?title=BBC_Micro&oldid=129763631}}, “la Vieille Dame” remet ça aujourd’hui. La BBC utilise ses moyens de diffusions pour promouvoir et accompagner les utilisateurs, notamment en proposant des émissions de TV dédié à cet objet sur un mode ludique et divertissant. Sur les 29\footnote{Partners. (s. d.). Consulté 29 mars 2017, à l’adresse \url{https://www.microbit.co.uk/partners}} partenaires de ce projet, se trouvent entre autres Microsoft\footnote{The BBC micro:bit and Microsoft - Microsoft Research. (s. d.). Consulté 29 mars 2017, à l’adresse \url{https://www.microsoft.com/en-us/research/project/the-bbc-microbit-and-microsoft/}} pour une partie logiciel et interface de programmation, ARM\footnote{Ltd, A. R. M. (s. d.). ARM | Innovation Hub - BBC micro:bit. Consulté 29 mars 2017, à l’adresse \url{http://www.arm.com/innovation/products/microbit.php}} pour la construction des processeur et la partie matériel, et Samsung\footnote{Code on the go with Samsung \& micro:bit. (s. d.). Consulté 29 mars 2017, à l’adresse \url{http://www.samsung.com/uk/citizenship/bbcmicrobit.html}} pour un support mobile. C’est donc un projet qui mobilise des acteurs majeurs du numériques et de la communication, prévu pour durer.
 
-\begin{figure}
-    \center
-    \includegraphics[width=0.5\linewidth]{res/mb-ap-02}
-    \legend{Cartes \mb lors d'un escape game utilisé en formation}
-\end{figure}
+% \begin{figure}
+%     \center
+%     \includegraphics[width=0.5\linewidth]{res/mb-ap-02}
+%     \legend{Cartes \mb lors d'un escape game utilisé en formation}
+% \end{figure}
 
 
 \subsection{La carte \mb}
