--- a/source/main.tex
+++ b/source/main.tex
@@ -21,6 +21,7 @@
 \begin{document}
 
 
+
 %%% Titre
 \pagecolor{orangeamu!25}
 \maketitle\thispagestyle{empty}
@@ -33,12 +34,12 @@
 
 %%% À propos de la brochure
 \newpage\pagecolor{bleuamu!10}
-\input{apropos.tex}
+% \input{apropos.tex}
 
 
 %%% Généralités
 \newpage\pagecolor{bleuamu!10}
-\input{apropos-mb.tex}
+% \input{apropos-mb.tex}
 
 
 %%% Fiches
@@ -49,8 +50,9 @@
 \newpage\nopagecolor\input{mb-pile.tex}
 \newpage\nopagecolor\input{mb-fluctuation.tex}
 \newpage\nopagecolor\input{mb-oscillations.tex}
+\newpage\nopagecolor\input{mbpy-FT_mu.tex}
 \newpage\nopagecolor\input{mbpy-FT_python.tex}
-\newpage\nopagecolor\input{mb_makecode_blocsPrincipaux.tex}
+\newpage\nopagecolor\input{MB_makecode_blocsPrincipaux.tex}
 \newpage\nopagecolor\input{mb_makecode_1erProgramme.tex}
 \newpage\nopagecolor\input{mbpy-initiationPython.tex}
 \newpage\nopagecolor\input{mbpy-dede.tex}
