--- a/source/maqueen-distance.tex
+++ b/source/maqueen-distance.tex
@@ -1,8 +1,6 @@
+\style{mq}
 %   Titre de la sous sections
 \section{Robot \mq et capteur de distance}
-
-\logo{mq}
-\pagestyle{mq}
 
 \subsection{Description}
 
@@ -178,7 +176,7 @@ Proposition de résolution :
     Si tu le désires, tu peux utiliser une règle, un obstacle (comme un tableau magnétique) et t'inspirer des deux indices ci-dessous\ldots
     
 %   ajout d'une image
-    \includegraphics[width=0.25\linewidth]{res/maqueen-fiche1-20.jpg}
+    \includegraphics[scale=0.6]{res/maqueen-fiche1-20.jpg}
     \hfill
     \includegraphics[width=0.45\linewidth]{res/maqueen-fiche1-21.png}
 \end{eleve}
