--- a/source/mb-borneSatisfaction.tex
+++ b/source/mb-borneSatisfaction.tex
@@ -1,15 +1,18 @@
+\style{mb}
+%\pagestyle{mb}
+%\logo{mb}
+
 %   Titre de la sous sections
 \section{Borne de satisfaction avec \mb}
 
 %   logo mb ou st dans la table des matières
-\logo{mb}
 %\logo{mbot}
 %\logo{st}
 
 %
 %   style de la page
 %   commenter avec % le style non utilisé
-\pagestyle{mb} %pour microbit
+ %pour microbit
 %\pagestyle{mbot} %pour mbot
 %\pagestyle{st} %pour ST
 
@@ -135,7 +138,7 @@ Proposition de résolution :
     Une proposition de code accessible en ligne
     \url{http://url.univ-irem.fr/w}.
     \begin{center}
-        \href {http://url.univ-irem.fr/w}{ \includegraphics[width=0.25\linewidth]{res/mb-jpo-code01-qr.png}}
+        \href {http://url.univ-irem.fr/w}{ \includegraphics[scale=0.6]{res/mb-jpo-code01-qr.png}}
     \end{center}
 \end{remarque}
 
