--- a/source/mb-dede.tex
+++ b/source/mb-dede.tex
@@ -1,10 +1,8 @@
+
+\style{mb}
+
+
 \section{Dé à 6 faces avec \mb}
-
-%   logo mb dans la table des matières
-\logo{mb}
-
-% style de page micro:bit
-\pagestyle{mb}
 
 \subsection{Description}
 
@@ -49,12 +47,14 @@ L'intérêt de cette activité n'est pas seulement de se départir des bruits de
 %       * travail en algo
 \cartouche{0,25 h}{2de}{expérience aléatoire}{}{affichage ; événement.}
 
+\begin{eleve}
 
 \begin{wrapfigure}[4]{r}{3.5cm}
-    \includegraphics[width=\linewidth]{res/mbDe6FacesN1.png}
+	\includegraphics[width=\linewidth]{res/mbDe6FacesN1.png}
 \end{wrapfigure}
-\begin{eleve}
+
 \texttt{\textsc{Mission} Utilise \mb~pour simuler un \emph{dé à 6 faces} !}
+
 
 En t'aidant des blocs ci-dessous, programme \mb~pour : 
 \begin{enumerate}
@@ -106,10 +106,14 @@ Ce premier niveau aucun niveau de difficulté, on pourrait dire que son intérê
 %       * travail en algo
 \cartouche{0,5 h}{2de}{expérience aléatoire}{}{affichage ; événement ; condition}
 
-\begin{wrapfigure}[4]{r}{3.5cm}
-    \includegraphics[width=\linewidth]{res/mbDe6FacesN2.png}
-\end{wrapfigure}
+
 \begin{eleve}
+	
+	
+\begin{wrapfigure}[7]{r}{4cm}
+	\includegraphics[width=\linewidth]{res/mbDe6FacesN2.png}
+\end{wrapfigure}
+
 Utilise \mb~pour simuler un \emph{dé à 6 faces} !
 
 En t'aidant des blocs ci-dessous, programme \mb~pour : 
