--- a/source/mb-fraction.tex
+++ b/source/mb-fraction.tex
@@ -1,10 +1,13 @@
+\style{mb}
+
+
 \section{Les fractions avec \mb}
 
 %   logo mb dans la table des matières
-\logo{mb}
+
 
 % style de page micro:bit
-\pagestyle{mb}
+%\pagestyle{mb}
 
 \subsection{Description}
 
