--- a/source/mb-oscillations.tex
+++ b/source/mb-oscillations.tex
@@ -1,11 +1,8 @@
+\style{mb} %pour microbit
+
+
 \section{Chutes et oscillations avec \mb}
-%\markboth{}{Compteur de chutes} %au cas où on utilise \section*
 
-%   logo mb dans la table des matières
-\logo{mb}
-
-% style de page micro:bit
-\pagestyle{mb}
 
 \subsection{Description}
 
