--- a/source/mb-pile.tex
+++ b/source/mb-pile.tex
@@ -1,10 +1,8 @@
+\style{mb} %pour microbit
+
+
 \section{Pile ou face avec \mb}
 
-%   logo mb dans la table des matières
-\logo{mb}
-
-% style de page micro:bit
-\pagestyle{mb}
 
 \subsection{Description}
 
@@ -22,7 +20,7 @@ Bien évidemment, travailler avec une carte \mb n'exclut pas de réaliser des ex
     \item [Simplicité de la situation.] La situation est très simple à expliquer et les élèves comprennent le but à atteindre. L'absence de difficulté mathématique rend cette situation particulièrement simple à mettre en œuvre.
     \item [Motivation des élèves.] L'envie de programmer un objet connecté est grande pour les élèves. Cette façon de programmer, \emph{utile, concrète et appliquée}, leur correspond parfaitement.
     \item [De nombreuses solutions/améliorations possibles.] Comme pour bien des projets, il y a plusieurs façons d'arriver à la solution. Par ailleurs, les élèves peuvent apporter ou proposer de nombreuses améliorations. La programmation par bloc, exempte de difficulté syntaxique, est particulièrement adaptée à la créativité.
-    \item [Travail mathématique sur la modélisation.] Cette compétence n'est pas facile à mettre en œuvre. Ici, l'absence de difficultés mathématiques rend ce travail beaucoup plus accessible à tous.
+    \item [Travail mathématique sur la modélisation.] Cette compétence n'est pas facile à mettre en œuvre. Ici, l'absence de difficulté mathématique rend ce travail beaucoup plus accessible à tous.
 \end{description}
 
 
@@ -175,7 +173,7 @@ Pour finir, nous souhaitons ajouter une fonctionnalité supplémentaire à \mb. 
 
 Regarde ci-dessous les instructions que tu pourrais ajouter.
 
-\centerline{\includegraphics[width=0.4\textwidth]{mbPilefaceN3blocs.png}}
+\centerline{\includegraphics[width=0.7\textwidth]{mbPilefaceN3blocs.png}}
 \end{eleve}
 
 
