--- a/source/mb-truque.tex
+++ b/source/mb-truque.tex
@@ -1,13 +1,15 @@
+\style{mb} %pour microbit
+
+
 %   Titre de la sous sections
 \section{Normal ou truqué? avec \mb}
 %   logo mb dans la table des matières
-\logo{mb}
+%\logo{mb}
 
 %
 %   style de la page
 %   commenter avec % le style non utilisé
 %\pagestyle{st} %pour ST
-\pagestyle{mb} %pour microbit
 
 \subsection{Description}
 
