--- a/source/mb_makecode_1erProgramme.tex
+++ b/source/mb_makecode_1erProgramme.tex
@@ -1,10 +1,7 @@
+\style{mb}
+
 %   Titre de la sous section
 \section{Ton premier programme avec \mb}
-
-%   logo mb  dans la table des matières
-\logo{mb}
-
-\pagestyle{mb}
 
 \subsection{Description}
 
