--- a/source/mb_makecode_blocsPrincipaux.tex
+++ b/source/mb_makecode_blocsPrincipaux.tex
@@ -1,10 +1,6 @@
+\style{ft}
 %   Titre de la sous section
 \section{Mémo : les blocs principaux \mb}
-
-%   logo mb  dans la table des matières
-\logo{mb}
-
-\pagestyle{mb}
 
 %   colonne de gauche
 \begin{minipage}[t]{0.75\linewidth}
