--- a/source/mbot-natureMouvement.tex
+++ b/source/mbot-natureMouvement.tex
@@ -1,16 +1,8 @@
+\style{mbot}
 %   Titre de la sous sections
 \section{Variation de vitesses avec MBot}
 
-%   logo mb ou st dans la table des matières
-%\logo{mb}
-\logo{mbot}
-%\logo{st}
 
-%
-%   style de la page
-%   commenter avec % le style non utilisé
-\pagestyle{mbot} %pour mbot
-%\pagestyle{st} %pour ST
 
 \subsection{Description}
 
