--- a/source/mbot-vitesse-rot.tex
+++ b/source/mbot-vitesse-rot.tex
@@ -1,17 +1,8 @@
+\style{mbot}
 %   Titre de la sous sections
 \section{Vitesse de rotation avec MBot}
 
-%   logo mb ou st dans la table des matières
-%\logo{mb}
-\logo{mbot}
-%\logo{st}
 
-%
-%   style de la page
-%   commenter avec % le style non utilisé
-%\pagestyle{mb} %pour microbit
-\pagestyle{mbot} %pour mbot
-%\pagestyle{st} %pour ST
 
 \subsection{Description}
 
