--- a/source/mbot-vitesse.tex
+++ b/source/mbot-vitesse.tex
@@ -1,17 +1,6 @@
+\style{mbot}
 %   Titre de la sous sections
 \section{Déterminer une vitesse avec \mbot}
-
-%   logo mb ou st dans la table des matières
-%\logo{mb}
-\logo{mbot}
-%\logo{st}
-
-%
-%   style de la page
-%   commenter avec % le style non utilisé
-%\pagestyle{mb} %pour microbit
-\pagestyle{mbot} %pour mbot
-%\pagestyle{st} %pour ST
 
 \subsection{Description}
 
