--- a/source/mbpy-FT_python.tex
+++ b/source/mbpy-FT_python.tex
@@ -1,6 +1,6 @@
+\style{ft}
+
 \section{Mémo \mbpy}
-\logo{mbpy}
-\pagestyle{mbpy}
 
 \begin{methode}[Essentiel]
 	Importer toutes les fonctions
@@ -353,201 +353,3 @@
 	{\small(présence de métal, d'aimants, etc.)}
 \end{remarque}
 \end{minipage}
-
-
-
-
-\newpage
-
-\subsection{Des commandes pour aller plus loin}
-\cartouche{2 h}{2de}{}{}{affichage ; bouton ; événement ; son}
-
-
-\subsubsection{Représentation graphique avec \texttt{Mu}}
-
-Il est possible de tracer un \textbf{nuage de points} avec l'IDE \texttt{Mu}.
-
-Pour cela, il faut 
-\begin{itemize}
-    \item utiliser l'outil \texttt{Graphique} de l'IDE \texttt{Mu},
-    \item faire afficher par le programme en cours d'exécution un tuple de nombres.
-\end{itemize}
-
-
-\begin{methode}
-Le programme ci-dessous affiche dans le terminal (ou \textbf{dans le Graphique} si l'outil de l'IDE est cliqué) des fréquences d'apparitions lors d'une expérience aléatoire.
-\pyfile{244}{258}{./res/mbpy-initiationPython.py.tex}
-\end{methode}
-
-
-
-\subsubsection{Des images personnalisées}
-
-Les images sont des objets qui peuvent être créées grâce au constructeur \pyline{Image("string")}.\par
-Le texte \pyline{"string"} permet de décrire, \textbf{ligne par ligne}, la luminosité de chaque pixel de l'écran de LED. Pour chaque diode, la valeur varie de 0 (éteinte) à 9 (luminosité maximale). Pour séparer les lignes, il faut utiliser le symbole \pyline{":"}
-
-\begin{methode}
-Voici une image représentant un bateau avec la coque plus foncée que les 2 mâts :
-\pyfile{31}{38}{./res/mbpy-initiationPython.py.tex}
-\end{methode}
-
-\begin{remarque}
-\textbf{Pour aller plus loin}, vous pouvez consulter les pages  \href{https://microbit-micropython.readthedocs.io/fr/latest/tutorials/images.html}{Introduction >> Images} ou \href{https://microbit-micropython.readthedocs.io/fr/latest/image.html}{Image} de la documentation officielle.
-\end{remarque}
-
-
-\subsubsection{Des animations personnalisées}
-
-En stockant des images personnalisées dans un tableau, il est possible de créer des \emph{animations personnalisées}.
-
-\begin{methode}
-Créer un image représentant un tableau et stocker cette image dans la variable \pyline{bateau1} :
-\pyfile{47}{52}{./res/mbpy-initiationPython.py.tex}
-
-Créer d'autres images (donnant l'illusion que le bateau s'enfonce) et les stocker dans de nouvelles variables:
-\pyfile{54}{58}{./res/mbpy-initiationPython.py.tex}\\
-\pyfile{60}{64}{./res/mbpy-initiationPython.py.tex}\\
-\pyfile{66}{70}{./res/mbpy-initiationPython.py.tex}\\
-\pyfile{72}{76}{./res/mbpy-initiationPython.py.tex}\\
-\pyfile{78}{82}{./res/mbpy-initiationPython.py.tex}
-
-Créer un tableau regroupant toutes les images et afficher l'animation :
-\pyfile{84}{85}{./res/mbpy-initiationPython.py.tex}
-\end{methode}
-
-\begin{remarque}
-\textbf{Pour aller plus loin}, vous pouvez consulter la page  \href{https://microbit-micropython.readthedocs.io/fr/latest/tutorials/images.html}{Introduction >> Images} de la documentation officielle.
-\end{remarque}
-
-
-\subsubsection{Faire parler \mb}
-
-La carte \mb peut aussi \textbf{parler}.
-Avant cela, il faut connecter un casque audio ou un (petit) haut-parleur à la carte.
-
-\begin{center}
-\includegraphics[width=3cm]{res/mbpy-init-audio.png}    
-\end{center}
-
-Le module \pyline{speech} contient les fonctions permettant de gérer la \emph{voix} de \mb, dont la fonction \pyline{speech.say("string")} qui fera parler.
-
-\begin{methode}
-\pyfile{16}{18}{./res/mbpy-initiationPython.py.tex}
-\end{methode}
-
-\begin{remarque}
-\textbf{Pour aller plus loin}, vous pouvez consulter les pages  \href{https://microbit-micropython.readthedocs.io/fr/latest/tutorials/speech.html}{Introduction >> Speech} ou \href{https://microbit-micropython.readthedocs.io/fr/latest/speech.html}{Speech} de la documentation officielle.
-\end{remarque}
-
-
-\subsubsection{De la musique}
-
-La carte \mb est capable de jouer de la musique. Pour cela, il faut au préalable \textbf{connecter un casque audio} ou un petit haut-parleur à la carte.
-
-\begin{center}
-\includegraphics[width=3cm]{res/mbpy-init-audio.png}    
-\end{center}
-
-Le module \pyline{music} contient les fonctions permettant de gérer et de contrôler le son. Parmi elles, la fonction \pyline{music.play()} joue une mélodie.
-
-Par ailleurs, le module  \pyline{music} contient aussi un grand nombre de mélodies enregistrée (ie. déjà programmées) comme par exemple :
-\begin{itemize}
-    \item \texttt{music.DADADADUM},
-    \item \texttt{music.ENTERTAINER} ou encore
-    \item \texttt{music.PRELUDE}.
-\end{itemize}
-
-
-\begin{methode}
-Voici comment jouer la musique \pyline{POWER_UP} avec \mb :
-
-\pyfile{10}{12}{./res/mbpy-initiationPython.py.tex}
-\end{methode}
-
-La carte \mb peut aussi générer un son en fonction de sa fréquence. Pour cela, il faut utiliser la fonction \pyline{music.pitch(freq, duree)} qui va générer pendant \pyline{duree} millisecondes le son de frequence \pyline{freq}.
-
-\begin{methode}
-    Le code ci-dessous génère une sirène qui passe d'un son grave à un son aigu puis qui redevient grave.\par
-    Chaque fois que le son redevient grave, la boucle teste si le bouton B \emph{a été} pressé. Si c'est la cas, le programme quitte la boucle.
-    
-    \pyfile{109}{118}{./res/mbpy-initiationPython.py.tex}
-\end{methode}
-
-\begin{methode}
-    Le programme ci-dessous génère un son dépendant de l'inclinaison du \mb.\\
-    Le bouton B permet de quitter cette boucle.
-    
-    \pyfile{148}{155}{./res/mbpy-initiationPython.py.tex}
-\end{methode}
-
-\begin{remarque}
-\textbf{Pour aller plus loin}, vous pouvez consulter les pages  \href{https://microbit-micropython.readthedocs.io/fr/latest/tutorials/music.html#}{Introduction >> Musique} ou \href{https://microbit-micropython.readthedocs.io/fr/latest/music.html#}{Music} de la documentation officielle.
-\end{remarque}
-
-
-\subsubsection{Les fichiers}
-
-La carte \mb peut stocker des fichiers. Ces derniers ne sont pas accessibles par le système classique de fichiers, mais par l'intermédiaire de l'outil \texttt{Fichier} de l'IDE \texttt{Mu}.
-
-Il est tout à fait possible d'utiliser Python pour lire, créer, modifier ou effacer un fichier.
-
-\begin{methode}
-    Pour \textbf{lister les fichiers} présents sur la carte \mb, il faut utiliser le module \pyline{os}.\par
-    La fonction \pyline{os.listdir()} renvoie alors une liste de chaîne de caractère. Chaque élément de la liste est un nom de fichier.
-\begin{minted}[bgcolor=grisClair]{python}
-import os
-listeFichiers = os.listdir()
-\end{minted}
-\end{methode}
-
-\begin{methode}
-    Pour \textbf{lire le contenu} d'un fichier (qui doit exister), il faut :
-    \begin{itemize}
-        \item créer une instance de fichier en mode lecture \pyline{'r'}
-        \item utiliser la méthode \pyline{.read()} pour copier le contenu du fichier dans une variable.
-    \end{itemize}~\\
-    
-    L'exemple ci-dessous lit le fichier \pyline{texte.txt}, copie son contenu dans la variable \pyline{txt} et l'afficher dans le terminal :
-\begin{minted}[bgcolor=grisClair]{python}
-with open('texte.txt','r') as monFichier:
-    txt = monFichier.read()
-print(txt)
-\end{minted}
-\end{methode}
-
-\begin{methode}
-    Pour \textbf{écrire un texte} dans un fichier (qui peut ne pas exister), il faut :
-    \begin{itemize}
-        \item créer une instance de fichier en mode écriture \pyline{'w'}
-        \item utiliser la méthode \pyline{.write("string")} pour écrire le texte dans le fichier (attention, si le fichier existait déjà, cela supprimera tout ce que le fichier contenait).
-    \end{itemize}~\\
-    
-    L'exemple ci-dessous ouvre le fichier \pyline{texte.txt} en écriture puis écrase son contenu avec le contenu de la variable \pyline{txt}.
-\begin{minted}[bgcolor=grisClair]{python}
-txt = "1,2,3\n4,5,6"
-with open('texte.txt','w') as monFichier:
-    monFichier.write(txt)
-\end{minted}
-\end{methode}
-
-\begin{methode}
-    Le programme ci-dessous effectue 50 tirages aléatoires qu'il enregistre dans le fichier \texttt{save.txt}.
-    
-    \begin{itemize}
-        \item importer tous les modules nécessaires
-        \item sauvegarder les 50 tirages dans la variable \pyline{txt}
-        \item établir la liste des fichiers
-        \item si le fichier \texttt{save.txt} existe, lire le fichier et sauvegarder ses données dans la variable \pyline{contenu}
-        \item ouvrir le fichier en mode écriture et l'écraser avec le contenu mis à jour.
-    \end{itemize}
-    
-    \pyfile{189}{192}{./res/mbpy-initiationPython.py.tex}\\
-    \pyfile{193}{198}{./res/mbpy-initiationPython.py.tex}\\
-    \pyfile{199}{200}{./res/mbpy-initiationPython.py.tex}\\
-    \pyfile{201}{206}{./res/mbpy-initiationPython.py.tex}\\
-    \pyfile{207}{210}{./res/mbpy-initiationPython.py.tex}
-\end{methode}
-
-\begin{remarque}
-\textbf{Pour aller plus loin}, vous pouvez consulter les pages  \href{https://microbit-micropython.readthedocs.io/fr/latest/tutorials/storage.html}{Introduction >> Storage} ou \href{https://microbit-micropython.readthedocs.io/fr/latest/filesystem.html}{Local Persistent File System} de la documentation officielle.
-\end{remarque}
