--- a/source/mbpy-dede.tex
+++ b/source/mbpy-dede.tex
@@ -1,18 +1,8 @@
+\style{mbpy}
 %   Titre de la sous sections
 \section{Simuler un dé avec \mbpy}
 
-%   logo mb ou st dans la table des matières
-\logo{mbpy}
-%\logo{mbot}
-%\logo{st}
-
 %
-%   style de la page
-%   commenter avec % le style non utilisé
-\pagestyle{mbpy} %pour microbit
-%\pagestyle{mbot} %pour mbot
-%\pagestyle{st} %pour ST
-
 \subsection{Description}
 
 \subsubsection{Objectif}
