--- a/source/mbpy-initiationPython.tex
+++ b/source/mbpy-initiationPython.tex
@@ -1,10 +1,6 @@
+\style{mbpy}
+
 \section{Commande de base pour \mbpy}
-
-%   logo mb dans la table des matières
-\logo{mbpy}
-
-% style de page micro:bit
-\pagestyle{mbpy}
 
 \subsection{Description}
 
