--- a/source/mbpy-pilecom.tex
+++ b/source/mbpy-pilecom.tex
@@ -1,10 +1,7 @@
+\style{mbpy}
+
 \section{Pile ou face communicant avec \mbpy}
 
-%   logo mb dans la table des matières
-\logo{mbpy}
-
-% style de page micro:bit
-\pagestyle{mbpy}
 
 \subsection{Description}
 
