--- a/source/st-pile.tex
+++ b/source/st-pile.tex
@@ -1,10 +1,10 @@
+\style{st}
+
+
 \section{Pile ou face avec \st}
 
-%   logo mb dans la table des matières
-\logo{st}
 
-% style de page micro:bit
-\pagestyle{st}
+
 
 \subsection{Description}
 
