--- a/source/st-truque.tex
+++ b/source/st-truque.tex
@@ -1,13 +1,8 @@
+\style{st}
 %   Titre de la sous sections
 \section{Normal ou truqué? avec \st}
 
-%   logo mb dans la table des matières
-\logo{st}
-%
-%   style de la page
-%   commenter avec % le style non utilisé
-\pagestyle{st} %pour ST
-%\pagestyle{mb} %pour microbit
+
 
 \subsection{Description}
 
