--- a/source/mb-fluctuation.tex
+++ b/source/mb-fluctuation.tex
@@ -1,16 +1,8 @@
+\style{mb} %pour microbit
+
+
 \section{Fluctuation d'échantillonnage avec \mb}
 
-%   logo mb ou st dans la table des matières
-\logo{mb}
-%\logo{mbot}
-%\logo{st}
-
-%
-%   style de la page
-%   commenter avec % le style non utilisé
-\pagestyle{mb} %pour microbit
-%\pagestyle{mbot} %pour mbot
-%\pagestyle{st} %pour ST
 
 \subsection{Description}
 
