--- a/source/mb_makecode_blocsPrincipaux.tex
+++ b/source/mb_makecode_blocsPrincipaux.tex
@@ -1,6 +1,8 @@
-\style{ft}
+\style{mb}
+
 %   Titre de la sous section
 \section{Mémo : les blocs principaux \mb}
+
 
 %   colonne de gauche
 \begin{minipage}[t]{0.75\linewidth}
