--- a/source/mb-fluctuation.tex
+++ b/source/mb-fluctuation.tex
@@ -18,13 +18,13 @@ Le but de ce projet est d'expérimenter la fluctuation d'échantillonnage à  pa
 
 \subsubsection{Intérêt}
 
- L'utilisation de l'interface \mb permet d'obtenir rapidement un programme fonctionnel, mais aussi d'afficher graphiquement la série de données produites par le simulateur. Cela représente un intérêt non-négligeable lorsque l'on souhaite traiter la fluctuation d'échantillonnage.
+ L'utilisation de l'interface \mb permet d'obtenir rapidement un programme fonctionnel, mais aussi d'afficher graphiquement la série de données produites. Cela représente un intérêt non-négligeable lorsque l'on souhaite traiter la fluctuation d'échantillonnage.
 
 %liste d'arguments
 \begin{description}
     \item [Simulation d'une grande série d'expériences aléatoires] Contrairement à l'usage du tableur, où l'élève va devoir manipuler un grand nombre de données en colonnes et en lignes, au risque de se perdre dans leur traitement, l'approche algorithmique de  ce problème permet d'aller à l'essentiel.
     \item [Afficher les données]
-    L'utilisation de l'interface \mb permet d'obtenir rapidement un programme fonctionnel, mais aussi d'afficher graphiquement la série de données produites par le simulateur. Cela représente un intérêt non-négligeable lorsque l'on souhaite traiter la fluctuation d'échantillonnage.
+    En utilisant le navigateur chrome, il est possible de recueillir les données générées et de les visualiser. L'échellle du graphique se réglant automatiquement sur le maximum et le minimum des données, cela permet une compréhension immédiate du phénomène.
 \end{description}
 
 
@@ -49,7 +49,7 @@ Le but de ce projet est d'expérimenter la fluctuation d'échantillonnage à  pa
 %   titre + fond bleu
 \begin{methode}
     On propose ici d'aborder la problématique en trois temps :
-    
+
     \begin{enumerate}
         \item \textbf{Prise en main - Vérifier le modèle.} \\
             Pour faciliter la prise en main et gagner du temps on propose aux élèves de vérifier un code déjà prêt. Cela facilite l'appropriation du problème.
@@ -57,7 +57,7 @@ Le but de ce projet est d'expérimenter la fluctuation d'échantillonnage à  pa
             À partir du modèle, l'élève doit élaborer un algorithme afin de produire des échantillons de taille fixé.
         \item \textbf{Avancé - Visualisation des données}\\
             Cette étape consiste en une amélioration du programme précédent afin de pouvoir visualiser les données issues de la simulation.
-            
+
     \end{enumerate}
 \end{methode}
 
@@ -74,7 +74,7 @@ Le but de ce projet est d'expérimenter la fluctuation d'échantillonnage à  pa
 \subsubsection{Activité élève}
 
 % commande perso \CARTOUCHE
-%   5 paramètres : 
+%   5 paramètres :
 %       * durée
 %       * public
 %       * travail en maths
@@ -96,26 +96,26 @@ Le but de ce projet est d'expérimenter la fluctuation d'échantillonnage à  pa
 
 %   bloc élève
 %   fond orange
-\begin{eleve}    
+\begin{eleve}
     \texttt{\textsc{Ta Mission} : Utiliser \mb pour simuler des \emph{naissances}!}
-    
+
     La situation est la suivante : à Ufa, en Russie, 51,2 \%  des naissances sont des garçons.
-    
+
     Dans cette ville, une usine agrochimique expose ses employés à des pesticides contenant de la dioxine.
-    
+
     D’après une étude de l’université de Montréal, parmi les 227 enfants nés d’un parent travaillant dans cette usine, 91 sont des garçons.
-    
+
     Cette étude cherche à déterminer si l’usine interfère sur les naissances.
-    
+
     Pour simuler les naissances à Ufa, on propose d'utiliser le programme ci-dessous.
-    
+
     \emph{Expliquer pourquoi} ce programme modélise correctement les naissance à Ufa.
-    
+
     \emph{Proposer} une façon de l'exploiter afin de vérifier l'influence des produits chimiques sur les naissances.
-    
+
 %   ajout d'une image
     \includegraphics[width=0.5\linewidth]{res/mb-fluctuation-activite1.png}
-    
+
 \end{eleve}
 
 
@@ -155,7 +155,7 @@ Bien entendu il faut suggérer aux élèves de tester le programme, afin d'en ap
 \subsubsection{Activité élève}
 
 % commande perso \CARTOUCHE
-%   5 paramètres : 
+%   5 paramètres :
 %       * durée
 %       * public
 %       * travail en maths
@@ -177,18 +177,18 @@ Bien entendu il faut suggérer aux élèves de tester le programme, afin d'en ap
 
 %   bloc élève
 %   fond orange
-\begin{eleve}    
+\begin{eleve}
     \texttt{\textsc{Ta Mission} : Utiliser \mb pour simuler des \emph{naissances}!}
-    
+
     Utilise les blocs proposés afin de générer des échantillons de taille identique à celui de l'étude.
-    
+
     \emph{Construire} un programme qui affiche le nombre de garçons obtenus dans un échantillons de 227 naissances.
-    
+
     \emph{Utiliser} le programme afin de vérifier si la situation de la problématique est vraisemblable.
-    
+
 %   ajout d'une image
     \includegraphics[width=0.8\linewidth]{res/mb-fluctuation-activite2-blocs.png}
-    
+
 \end{eleve}
 
 %   saut de page
@@ -216,7 +216,7 @@ Le programme attendu peut être celui-ci si l'élève a utilisé tous les blocs 
     Ici l'utilisation de la variable \emph{f} n'est pas indispensable pour l'algorithme. Son intérêt est pédagogique : elle permet de faire le lien avec l'activité précédente en conservant le modèle proposé.
 
    Avant de passer à l'activité 3, il est tout de même préférable de faire s'interroger les élèves sur la nécessité de l'existence de la variable \emph{f}.
-   
+
    Enfin, on interrogera les élèves sur le nombre d'échantillons qu'ils jugent nécessaires afin de valider leurs hypothèses.
 \end{remarque}
 
@@ -234,7 +234,7 @@ Le programme attendu peut être celui-ci si l'élève a utilisé tous les blocs 
 \subsubsection{Activité élève}
 
 % commande perso \CARTOUCHE
-%   5 paramètres : 
+%   5 paramètres :
 %       * durée
 %       * public
 %       * travail en maths
@@ -256,20 +256,20 @@ Le programme attendu peut être celui-ci si l'élève a utilisé tous les blocs 
 
 %   bloc élève
 %   fond orange
-\begin{eleve}    
+\begin{eleve}
     \texttt{\textsc{Ta Mission} : Utiliser \mb pour simuler des \emph{naissances} et produire des \emph{données}!}
-    
+
     Utilise les blocs proposés afin de générer 100 échantillons de taille identique à celui de l'étude.
-    
+
     \emph{Construire} un programme qui envoie une série de 100 valeurs, chacune correspondant au nombre de garçon dans un échantillon.
-    
+
     \emph{Utiliser} le programme et la fonctionnalité \emph{Afficher la console} du simulateur pour visualiser les données.
-    
+
     \emph{Exploiter} les données produites pour déterminer si l'usine interfère sur les naissances de garçons.
-    
+
 %   ajout d'une image
     \includegraphics[width=0.8\linewidth]{res/mb-fluctuation-activite3-blocs.png}
-    
+
 \end{eleve}
 
 %   saut de page
@@ -295,6 +295,6 @@ Le programme attendu peut être celui-ci  :
 
 \begin{remarque}
    On interrogera les élèves sur les minimum et les maximum observés et sur la fréquence d'apparition d'un effectif inférieur ou égal à 91.
-   
+
    Les données produites sont exportables en .csv et donc exploitables dans un tableur.
 \end{remarque}
