--- a/source/mainShort.tex
+++ b/source/mainShort.tex
@@ -18,19 +18,23 @@
 
 
 
-
 \begin{document}
 
+
+\newpage\nopagecolor\input{\myFile}
+
+%%% Fiches
 % \newpage\nopagecolor\input{mb-borneSatisfaction.tex}
 % \newpage\nopagecolor\input{mb-fraction.tex}
 % \newpage\nopagecolor\input{mb-dede.tex}
 % \newpage\nopagecolor\input{mb-truque.tex}
-\newpage\nopagecolor\input{mb-pile.tex}
+% \newpage\nopagecolor\input{mb-pile.tex}
 % \newpage\nopagecolor\input{mb-fluctuation.tex}
 % \newpage\nopagecolor\input{mb-oscillations.tex}
-% \newpage\nopagecolor\input{mbpy-FT_mu.tex}
+%\newpage\nopagecolor\input{mbpy-FT_mu.tex}
 % \newpage\nopagecolor\input{mbpy-FT_python.tex}
-% \newpage\nopagecolor\input{MB_makecode_blocsPrincipaux.tex}
+% \newpage\nopagecolor\input{mb_makecode_blocsPrincipaux.tex}
+% \newpage\nopagecolor\input{mb_makecode_1erProgramme.tex}
 % \newpage\nopagecolor\input{mbpy-initiationPython.tex}
 % \newpage\nopagecolor\input{mbpy-dede.tex}
 % \newpage\nopagecolor\input{mbpy-pilecom.tex}
