renommer les fichiers

--- a/source/mainShort.tex
+++ b/source/mainShort.tex
@@ -21,10 +21,10 @@
 \begin{document}
 
 
-\newpage\nopagecolor\input{\myFile}
+\newpage\nopagecolor\input{\jobname}
 
 %%% Fiches
-% \newpage\nopagecolor\input{mb-borneSatisfaction.tex}
+% \newpage\nopagecolor\input{fiche_mb-borneSatisfaction.tex}
 % \newpage\nopagecolor\input{mb-fraction.tex}
 % \newpage\nopagecolor\input{mb-dede.tex}
 % \newpage\nopagecolor\input{mb-truque.tex}
@@ -43,7 +43,7 @@
 % \newpage\nopagecolor\input{mbot-vitesse-rot.tex}
 % \newpage\nopagecolor\input{mbot-natureMouvement.tex}
 % \newpage\nopagecolor\input{st-truque.tex}
-% \newpage\nopagecolor\input{st-pile.tex}
+% \newpage\nopagecolor\input{fiche_st-pile.tex}
 
 
 \newpage
