--- a/source/mainShort.tex
+++ b/source/mainShort.tex
@@ -4,8 +4,6 @@
 \usepackage{maConfiguration}
 
 \title{%
-    \Huge
-    \includegraphics[scale=.4]{mb4}\\[2cm]
     Les objets connectés pour enseigner\\
     l'algorithmique\\
     en lycée professionnel}
@@ -21,28 +19,32 @@
 \begin{document}
 
 
+
+%%% Fiches automatiquement avec le script 
 \newpage\nopagecolor\input{\jobname}
 
-%%% Fiches
+
+
+%%% Fiches une par une (obsolète !)
 % \newpage\nopagecolor\input{fiche_mb-borneSatisfaction.tex}
-% \newpage\nopagecolor\input{mb-fraction.tex}
-% \newpage\nopagecolor\input{mb-dede.tex}
-% \newpage\nopagecolor\input{mb-truque.tex}
-% \newpage\nopagecolor\input{mb-pile.tex}
-% \newpage\nopagecolor\input{mb-fluctuation.tex}
-% \newpage\nopagecolor\input{mb-oscillations.tex}
-% \newpage\nopagecolor\input{mbpy-FT_mu.tex}
-% \newpage\nopagecolor\input{mbpy-FT_python.tex}
-% \newpage\nopagecolor\input{mb_makecode_blocsPrincipaux.tex}
-% \newpage\nopagecolor\input{mb_makecode_1erProgramme.tex}
-% \newpage\nopagecolor\input{mbpy-initiationPython.tex}
-% \newpage\nopagecolor\input{mbpy-dede.tex}
-% \newpage\nopagecolor\input{mbpy-pilecom.tex}
-% \newpage\nopagecolor\input{maqueen-distance.tex}
-% \newpage\nopagecolor\input{mbot-vitesse.tex}
-% \newpage\nopagecolor\input{mbot-vitesse-rot.tex}
-% \newpage\nopagecolor\input{mbot-natureMouvement.tex}
-% \newpage\nopagecolor\input{st-truque.tex}
+% \newpage\nopagecolor\input{fiche_mb-fraction.tex}
+% \newpage\nopagecolor\input{fiche_mb-dede.tex}
+% \newpage\nopagecolor\input{fiche_mb-truque.tex}
+% \newpage\nopagecolor\input{fiche_mb-pile.tex}
+% \newpage\nopagecolor\input{fiche_mb-fluctuation.tex}
+% \newpage\nopagecolor\input{fiche_mb-oscillations.tex}
+% \newpage\nopagecolor\input{fiche_mbpy-FT_mu.tex}
+% \newpage\nopagecolor\input{fiche_mbpy-FT_python.tex}
+% \newpage\nopagecolor\input{fiche_mb_makecode_blocsPrincipaux.tex}
+% \newpage\nopagecolor\input{fiche_mb_makecode_1erProgramme.tex}
+% \newpage\nopagecolor\input{fiche_mbpy-initiationPython.tex}
+% \newpage\nopagecolor\input{fiche_mbpy-dede.tex}
+% \newpage\nopagecolor\input{fiche_mbpy-pilecom.tex}
+% \newpage\nopagecolor\input{fiche_maqueen-distance.tex}
+% \newpage\nopagecolor\input{fiche_mbot-vitesse.tex}
+% \newpage\nopagecolor\input{fiche_mbot-vitesse-rot.tex}
+% \newpage\nopagecolor\input{fiche_mbot-natureMouvement.tex}
+% \newpage\nopagecolor\input{fiche_st-truque.tex}
 % \newpage\nopagecolor\input{fiche_st-pile.tex}
 
 
@@ -51,11 +53,18 @@
 
 
 
-%\newpage
+\begin{center}
+    {\footnotesize \textit{Un extrait de la brochure}}
+
+    {\Large Les objets connectés pour enseigner\\
+    l'algorithmique\\
+    en lycée professionnel}
 
 
-%\maketitle
-% suppresion pied de page
-%\thispagestyle{empty}
+
+{\small < version du \today~>}
+
+\end{center}
+
 
 \end{document}
